# vignetting_correction

./: .gitignore  CMakeLists.txt  GaussianBlur.cpp  GaussianBlur.h  ImageAlgo.h  ImageAlgoBase.h  ImageAlgo_gil.h  ImageAlgo_opencv.h  LICENSE  README.md  VignettingCorrection.cpp  VignettingCorrection.h  build.bat  build.sh  build_opencv.bat  build_opencv.sh  conanfile.txt  conanfile_opencv.txt  configure.sh  configure_opencv.sh
.github/workflows/: ccpp.yml
cmd/: CMakeLists.txt  Main.cpp
lib/: CMakeLists.txt  GaussianBlur.cpp  ImageAlgo.h  ImageAlgo_opencv.h  VignettingCorrection.cpp  VignettingCorrection.h  vgncorr.cpp  vgncorr.h
